--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -30,3 +30,11 @@
 
   background-color: var(--primary);
 }
+.arrow {
+  display: inline-block;
+  margin-left: 10px;
+}
+.down {
+  transform: rotate(90deg);
+  transition: all 0.2s;
+}
